--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -82,6 +82,7 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: 'Arvo', serif;
 }
 
 p {
@@ -252,7 +253,7 @@ optgroup,
 textarea {
   margin: 0;
   font-family: inherit;
-  font-size: inherit;
+  /* font-size: inherit; */
   line-height: inherit;
 }
 
@@ -264,6 +265,10 @@ input {
 button,
 select {
   text-transform: none;
+}
+
+.button-size{
+  font-size: 18px;
 }
 
 button,
@@ -549,8 +554,8 @@ pre code {
 
 .container {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-right: auto;
   margin-left: auto;
 }
